--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ asgiref==3.9.1
 certifi==2025.8.3
 charset-normalizer==3.4.3
 Django==5.2.5
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
 idna==3.10
+pillow==11.2.1
 python-dotenv==1.1.1
 requests==2.32.5
 sqlparse==0.5.3
